# shared-nothing

./: .gitignore  ACCELERATORS.md  ACCELERATOR_INTEGRATION.md  ADVANCED_FEATURES.md  ARCHITECTURE.md  AUTHORS  BACKLOG.md  COPYRIGHT  Cargo.toml  LICENSE  NETWORKING_IMPLEMENTATION.md  NETWORKING_OPTIONS.md  PERFORMANCE.md  PROJECT_SUMMARY.md  PROTOCOL_LAYER.md  QUICKSTART.md  README.md  STORAGE.md  STORAGE_PROTOCOL_LAYER.md  ZERO_CONFIG.md
LICENSES/: MIT-0.txt
benches/: message_passing.rs  worker_pool.rs
examples/: basic_worker.rs  data_processing.rs  distributed_compute.rs
src/: channel.rs  error.rs  lib.rs  message.rs  partition.rs  pool.rs  worker.rs
